force-app/main/default/objects/OpsEventLog__c/OpsEventLog__c.object-meta.xml
<CustomObject>
    <label>OpsEventLog</label>
    <nameField>
        <label>OpsEventLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpsEventLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>