force-app/main/default/objects/OpsEventLog__c/fields/Date_de_prestation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_prestation__c</fullName>
    <label>Date de prestation</label>
    <type>Date</type>
</CustomField>