force-app/main/default/objects/OpsEventLog__c/fields/Date_de_reception__c.field-meta.xml
<CustomField>
    <fullName>Date_de_reception__c</fullName>
    <label>Date de reception</label>
    <type>Date</type>
</CustomField>