force-app/main/default/objects/OpsEventLog__c/fields/idAffaire__c.field-meta.xml
<CustomField>
    <fullName>idAffaire__c</fullName>
    <label>idAffaire</label>
    <length>15</length>
    <type>Text</type>
</CustomField>