force-app/main/default/objects/OpsEventLog__c/fields/PDL_PCE__c.field-meta.xml
<CustomField>
    <fullName>PDL_PCE__c</fullName>
    <label>identifiant PDL PCE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>