force-app/main/default/objects/OpsEventLog__c/fields/Projet__c.field-meta.xml
<CustomField>
    <fullName>Projet__c</fullName>
    <label>Projet</label>
    <length>30</length>
    <type>Text</type>
</CustomField>