force-app/main/default/objects/OpsEventLog__c/fields/Statut_prestation__c.field-meta.xml
<CustomField>
    <fullName>Statut_prestation__c</fullName>
    <label>Statut prestation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>