force-app/main/default/objects/OpsEventLog__c/fields/TypeEnergie__c.field-meta.xml
<CustomField>
    <fullName>TypeEnergie__c</fullName>
    <label>TypeEnergie</label>
    <length>5</length>
    <type>Text</type>
</CustomField>