force-app/main/default/objects/OpsEventLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Projet__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_de_prestation__c</columns>
    <columns>Date_de_reception__c</columns>
    <columns>idAffaire__c</columns>
    <columns>Statut__c</columns>
    <columns>Statut_prestation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>